--- a/.github/workflows/fetch-discogs-wantlist.yml
+++ b/.github/workflows/fetch-discogs-wantlist.yml
@@ -47,7 +47,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add _data/wantlist.json
-          git commit -m "chore: update discogs wantlist [skip ci]"
+          git commit -m "chore: update discogs wantlist"
           git push
 
       - name: No changes detected
