--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ picture:
   markup: "picture"
   formats: [avif, webp, original]
   dimension_attributes: true
-  fast_build: true
+  fast_build: development
   nomarkdown: false
 
 # Collections
