--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ navigation:
 # Social Links
 social:
   instagram: https://www.instagram.com/kevinmeyvaert/
+  github: https://github.com/kevinmeyvaert
   email: kevin.meyvaert@gmail.com
 
 # Build settings
